--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,19 @@
 </head>
 
 <body>
+    <header>
+        <h2 class="text-4xl text-center my-12 font-bold">Hunting Phone</h2>
+    </header>
+    <main>
+        <section>
+            <div id="phone-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-between gap-y-8 mx-auto">
+                
+            </div>
+        </section>
+    </main>
+    <footer>
 
+    </footer>
 
     <script src="js/app.js"></script>
 </body>
