add loading dots while loading data on webpage

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
                 <option value="samsung">Samsung</option>
                 <option value="oppo">Oppo</option>
                 <option value="vivo">Vivo</option>
-                <option value="realme">Realme</option>
+                <option value="huawei">Huawei</option>
               </select>
         </section>
         <section id="result-container">
+            <div class="text-center">
+                <span id="loading" class="loading loading-dots text-primary my-40 loading-lg hidden"></span>
+            </div>
             <div id="phone-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-between gap-y-8 mx-auto">
                 
             </div>
