implement search functionality and showing search results

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <option value="vivo">Vivo</option>
                 <option value="huawei">Huawei</option>
             </select>
+            <input type="text" id="search-input" placeholder="Search" class="input input-bordered w-full max-w-xs" />
+            <button class="btn btn-primary" id="search-btn">Search</button>
         </section>
         <section id="result-container">
             <div class="text-center">
