--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <h2 class="text-4xl text-center my-12 font-bold">Hunting Phone</h2>
     </header>
-    <main>
-        <section class="md:container mx-auto">
+    <main class="container mx-auto">
+        <section class="mb-12">
             <label for="selection" class="font-semibold">Pick Your favorite brand: </label>
             <select id="selection" class="select w-full max-w-xs mx-auto my-8">
                 <option selected value="iphone">Iphone</option>
@@ -25,6 +25,21 @@
             </select>
             <input type="text" id="search-input" placeholder="Search" class="input input-bordered w-full max-w-xs" />
             <button class="btn btn-primary" id="search-btn">Search</button>
+            <div class="inline-block mx-auto">
+                <label class="flex cursor-pointer gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="5" />
+                        <path
+                            d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4" />
+                    </svg>
+                    <input type="checkbox" value="dark" class="toggle theme-controller" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+                    </svg>
+                </label>
+            </div>
         </section>
         <section id="result-container">
             <div class="text-center">
